Correção no footer

--- a/src/app/core/dm-footer/dm-footer.component.html
+++ b/src/app/core/dm-footer/dm-footer.component.html
@@ -3,7 +3,7 @@
         Copyright © {{ currYear }} Depeche Mode All rights reserved
     </div>
     <div class="dm-developer">
-        Development: <a href="mailto:beta6484@gmail.com">Roberta Carvalho</a> for <a href="http://www.codezone.com.br/" target="_blank" rel="noopener noreferrer">Codezone</a>
+        Development: <a href="mailto:beta6484@gmail.com">Roberta Carvalho</a>
     </div>
     <div class="dm-social">
         <a class="site" href="http://depechemode.com/" target="_blank" rel="noopener noreferrer" title="Oficial Website">
